# PyOptik

./: .buildinfo  .coverage  .gitignore  .readthedocs.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  README.rst  code.html  data.json  genindex.html  index.html  meta.yaml  objects.inv  py-modindex.html  pyproject.toml  references.html  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html  version_switcher.json
.doctrees/: code.doctree  environment.pickle  index.doctree  sg_execution_times.doctree
CMAKES/: Meta.cmake  Utils.cmake
Examples/: GetValues.py
PyOptik/: __init__.py  __main__.py  _version.py  default.py  directories.py  experiment_material.py  material.py  material_bank.py  material_class.py  materials.py  sellmeier.py  sellmeier_class.py  sellmeier_material.py  tabulated_class.py  units.py  upload.py  usual_materials.py  utils.py
_build/: .buildinfo  genindex.html  index.html  objects.inv  references.html  search.html  searchindex.js  sg_execution_times.html
_modules/: index.html
_sources/: sg_execution_times.rst.txt
development/: dev_0.py
docs/: index.rst
documentation_build/: .buildinfo  index.html  searchindex.js  sg_execution_times.html
gallery/: add_material.html  create_sellmeier_file.html  create_tabulated_file.html  download_yml_file.html  get_values.html  index.html  measurements_tio2.html  measurements_water.html  plot_bk7.html  plot_sellmeier_0.html  plot_sellmeier_1.html  plot_sf5.html  plot_silica.html  plot_silver.html  plot_water.html  sellmeier_bk7.html  sellmeier_sf5.html  sellmeier_silica.html  (+1 more)
(+2380 files in other folders)
