[build_ext]
inplace=1


[metadata]
name = PyOptik
description = A package for light propagation in fiber optics.
version = file: VERSION
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Martin Poinsinet de Sivry
author_email = Martin.poinsinet.de.sivry@gmail.com
platforms = unix, linux, osx
url = https://github.com/MartinPdeS/PyOptik
license = MIT
license_file = LICENSE
readme = README.rst
classifiers = 
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: Implementation :: CPython
        Development Status :: 3 - Alpha
        Topic :: Scientific/Engineering :: Physics


[options]
packages=find:

	
include_package_data = true
python_requires >= 3.10

setup_requires = 
	setuptools 
	numpy

install_requires =
	numpy
	pandas
	matplotlib
	bs4
	requests

[sdist]
formats = zip, gztar
